# ax-code

./: .gitignore  .mcp.json  .npmrc  .prettierignore  AGENTS.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE-MIT  LICENSING.md  NOTICE  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  SECURITY.md  TRADEMARKS.md  bunfig.toml  flake.nix  install  (+7 more)
.automatosx/: config.json  environment.json  mcp.json  providers.json
.automatosx/context/: conventions.md  rules.md
.automatosx/providers/: codex.config.toml
.automatosx/runtime/: state.db-shm  state.db-wal  traces.db-shm  traces.db-wal
.cursor/: mcp.json
.gemini/: settings.json
.github/: TEAM_MEMBERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/scripts/: assert-ax-code-version.sh  assert-runtime-mode.sh  filter-dispatch-channel.sh  resolve-version-for-workflow.sh  set-isolated-home-env.sh  update-homebrew-source.sh  update-homebrew.sh  (+1 more)
.husky/: pre-commit
ADRS/: ADR-001-ax-code-revamp.md
BUGS/: 197-session-workspace-missing-fk.md  200-part-session-missing-fk.md  BUG-context-tokens-zero-and-progress-bar-stuck.md  BUG-missing-font-import.md  BUG-missing-sanitize-html-types.md  BUG-spinner-missing-during-subtask.md  BUG-tui-thread-test-mocking-failure.md  BUG-zai-zero-tokens.md  README.md
PRDS/: PRD-native-tui-hybrid-handoff.md  PRD-pnpm-migration.md  PRD-programmatic-sdk.md  PRD-sandbox-gaps.md
TODOS/: api-key-storage-review.md  architecture-direction-review.md  performance-review.md  sandbox-proposal.md
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/ax-code-bench/: Cargo.toml
crates/ax-code-bench/src/: bench_diff.rs  bench_fs.rs  bench_index.rs
crates/ax-code-daemon/: Cargo.toml
crates/ax-code-daemon/src/: daemon.rs  lib.rs
crates/ax-code-diff/: Cargo.toml
crates/ax-code-diff/examples/: bench.rs
crates/ax-code-diff/src/: helpers.rs  lib.rs
crates/ax-code-fs/: Cargo.toml
crates/ax-code-fs/examples/: bench.rs
crates/ax-code-fs/src/: detect.rs  embedding.rs  lib.rs  watcher.rs
crates/ax-code-index/: Cargo.toml
crates/ax-code-index/examples/: bench.rs
crates/ax-code-index/src/: cursor.rs  edge.rs  file.rs  hasher.rs  id.rs  interval_tree.rs  lib.rs  lock.rs  node.rs  schema.rs  store.rs
crates/ax-code-parser/: Cargo.toml
crates/ax-code-parser/src/: lib.rs
crates/ax-code-render/: Cargo.toml  RETIRED.md  build.rs
crates/ax-code-render/src/: buffer.rs  buffer_ffi.rs  edit_buffer.rs  edit_buffer_ffi.rs  editor_view.rs  editor_view_ffi.rs  ffi_utils.rs  gcb.rs  gcb_table.rs  handles.rs  lib.rs  mem_registry.rs  misc_ffi.rs  native_span_feed.rs  pool.rs  renderer.rs  renderer_ffi.rs  rope.rs  segment.rs  syntax_style.rs  terminal.rs  text_buffer.rs  text_buffer_ffi.rs  text_buffer_view.rs  text_buffer_view_ffi.rs  text_view_draw.rs  unicode.rs  width_table.rs  yoga_sys.rs
crates/ax-code-terminal/: Cargo.toml
crates/ax-code-terminal/src/: lib.rs
crates/ax-code-tui/: Cargo.toml  README.md
crates/ax-code-tui/src/: client.rs  diagnostics.rs  events.rs  launch_policy.rs  lib.rs  main.rs  runner.rs  terminal.rs
crates/ax-code-tui/src/tui/: app.rs  app_events.rs  input.rs  mod.rs  render.rs
crates/ax-code-tui/tests/: acceptance_test.rs  client_test.rs  edge_case_test.rs  lifecycle_test.rs  parity_test.rs  render_test.rs  runner_test.rs  session_test.rs  smoke_harness.rs  tool_result_test.rs  tui_test.rs
crates/ax-code-tui/tests/fixtures/: permission_flow.json  session_created.json  streaming_message.json
crates/ax-code-tui/tests/support/: fixture_loader.rs  mock_server.rs  mod.rs
desktop/: CHANGELOG.md  CONTRIBUTING.md  LICENSE-MIT  NOTICE  README.md  SECURITY.md  eslint.config.js  tsconfig.json  vite-theme-plugin.ts  vite.config.ts  vitest.config.ts
docs/: ADR-002-features-5-8.md  PRD-ax-code-revamp.md  PRD-code-quality-refactor.md  PRD-features-5-8.md  PRD-pnpm-migration.md  README.md  acp.md  auto-route.md  automatosx-stack.mmd  autonomous.md  ax-code-license-audit.xlsx  ax-code-migration-review.md  ax-code-migration-review.xlsx  ax-code-runtime.mmd  ax-code-ui-ux-todos.md  ax-engine-model-selection.md  code-intelligence.md  custom-provider.md  effort.md  hooks.md  install-runtime.md  local-engine-integration.md  mcp.md  modes.md  sandbox.md  sdk-grpc-native.md  sdk-http-openapi.md  semantic-layer.md  smart-llm.md  stability.md  start-here.md  supported-providers.md  wiki.md  work-done-2026-03-25.csv  work-done-2026-03-25.md  work-done-2026-03-25.xlsx  work-done-2026-03-27.md
github/: README.md  action.yml  index.ts  package.json
logo/: manifest.json
nix/: desktop.nix  node_modules.nix  opencode.nix
patches/: @msgpack__msgpack@3.1.3.patch  @opentui__core@0.4.1.patch  gray-matter@4.0.3.patch  node-pty-prebuilt-multiarch@0.10.1-pre.5.patch  solid-js@1.9.10.patch
planning/: issue-review-94-plus-2026-04-19.md  tui-native-renderer-prd.md
script/: ax-internal-context.ts  beta.test.ts  beta.ts  build-native.ts  changelog.ts  check-desktop-boundaries.test.ts  check-desktop-boundaries.ts  check-no-cost.ts  docs-navigation.test.ts  dogfood-native-render.sh  dogfood-native-tui.sh  duplicate-pr.ts  format.ts  generate-install-gif.py  generate.ts  hooks  import-specifiers.test.ts  import-specifiers.ts  internal-context.ts  node-ffi-runner-args.mjs  node-ffi-runner-args.test.ts  node-ffi-runner.mjs  plugin-sdk-naming.test.ts  publish-github-release.test.ts  publish-github-release.ts  publish.ts  repo-structure-workflow.test.ts  repository-policy.test.ts  repository-policy.ts  resign-release-assets.test.ts  resign-release-assets.ts  sdk-generation-workflow.test.ts  setup-cli.test.ts  setup-cli.ts  sign-release-assets.test.ts  sign-release-assets.ts  solid-loader.mjs  stats.ts  structure.ts  sync-zed.ts  (+2 more)
scripts/: setup-cli.ts
tools/: update-models.ts
(+226 files in other folders)
