[package]
name = "ax-code-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
