[package]
name = "ax-code-index"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[example]]
name = "ax-code-index-bench"
path = "examples/bench.rs"

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"] }

[build-dependencies]
napi-build = { workspace = true }
