[package]
name = "ax-code-render"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
unicode-properties = "0.1"

[build-dependencies]
napi-build = { workspace = true }
cc = { workspace = true }
